--- a/index.html
+++ b/index.html
@@ -443,8 +443,15 @@
                     </li>
                 </ul>
             </div>
-
-
+            <div>
+                <form>
+                    
+                    <label for="newsletter">
+                        <p>Subscribe</p>
+                        <input type="email" name="newsletter" placeholder="E-mail"/>
+                    </label>
+                </form>
+            </div>
 
         </div>
     </footer>
