--- a/index.html
+++ b/index.html
@@ -444,13 +444,25 @@
                 </ul>
             </div>
             <div>
-                <form>
+                <div>
+                    <form>
                     
                     <label for="newsletter">
                         <p>Subscribe</p>
                         <input type="email" name="newsletter" placeholder="E-mail"/>
                     </label>
-                </form>
+                    </form>
+                </div>
+                <div>
+                    <button for="newsletter" type="submit">
+                        <p>Subscribe</p>
+                        <svg>
+                            <use href="icon-fly"></use>
+                        </svg>
+
+                    </button>
+                </div>
+                
             </div>
 
         </div>
