--- a/index.html
+++ b/index.html
@@ -446,20 +446,19 @@
             <div>
                 <div>
                     <form>
-                    
                     <label for="newsletter">
                         <p>Subscribe</p>
-                        <input type="email" name="newsletter" placeholder="E-mail"/>
+                        <input type="email" name="newsletter" placeholder="E-mail" class="newsletter-input"/>
                     </label>
                     </form>
                 </div>
+
                 <div>
                     <button for="newsletter" type="submit">
                         <p>Subscribe</p>
                         <svg>
-                            <use href="icon-fly"></use>
+                            <use href="./images/icons.svg#icon-fly"></use>
                         </svg>
-
                     </button>
                 </div>
                 
