--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
                 <div>
                     <form>
                     <label for="newsletter">
-                        <p>Subscribe</p>
-                        <input type="email" name="newsletter" placeholder="E-mail" class="newsletter-input"/>
+                        Subscribe
+                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input"/>
                     </label>
                     </form>
                 </div>
