--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </div>
 
                 <div>
-                    <button for="newsletter" type="submit">
+                    <button type="submit">
                         <p>Subscribe</p>
                         <svg>
                             <use href="./images/icons.svg#icon-fly"></use>
