--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
                 <div>
                     <button type="submit">
-                        <p>Subscribe</p>
+                        Subscribe
                         <svg>
                             <use href="./images/icons.svg#icon-fly"></use>
                         </svg>
