--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <form>
                     <label for="newsletter">
                         Subscribe
-                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input"/>
+                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
                     </label>
                     </form>
                 </div>
@@ -457,7 +457,8 @@
                     <button type="submit">
                         Subscribe
                         <svg>
-                            <use href="./images/icons.svg#icon-fly"></use>
+                            <use href="./images/icons.svg#icon-fly">
+                            </use>
                         </svg>
                     </button>
                 </div>
