--- a/index.html
+++ b/index.html
@@ -445,11 +445,9 @@
             </div>
             <div>
                 <div>
+                    <p class="subscribe-paragraph">Subscribe</p>
                     <form>
-                    <label for="newsletter">
-                        Subscribe
                         <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
-                    </label>
                     </form>
                 </div>
 
