--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 </ul>
             </div>
             <div>
-                <div>
+                <div class="form-container">
                     <p class="subscribe-paragraph">Subscribe</p>
                     <form>
                         <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
