--- a/index.html
+++ b/index.html
@@ -445,14 +445,14 @@
             </div>
             <div class="form-container">
                 <p class="subscribe-paragraph">Subscribe</p>
-                <form>
+                <form class="newsletter-form">
                     <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
                 </form>
 
 
-                    <button type="submit">
+                    <button type="submit" class="newsletter-button" width="165" height="40">
                         Subscribe
-                        <svg>
+                        <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-fly">
                             </use>
                         </svg>
