--- a/index.html
+++ b/index.html
@@ -446,7 +446,9 @@
             <div class="form-container">
                 <p class="subscribe-paragraph">Subscribe</p>
                 <form class="newsletter-form">
-                    <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
+                    <label>
+                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
+                    </label>
                 </form>
 
 
