--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     </label>
                 </form>
 
-                <button type="submit" class="newsletter-button" width="165" height="40">
+                <button type="submit" class="newsletter-button">
                     Subscribe
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-fly">
