--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     </label>
                     <button type="submit" class="newsletter-button">
                         Subscribe
-                        <svg width="24" height="24">
+                        <svg class="newsletter-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-fly">
                             </use>
                         </svg>
