--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <div class="form-container">
                 <p class="subscribe-paragraph">Subscribe</p>
                 <form class="newsletter-form">
-                    <label for="newsletter">
+                    <label for="newsletter" class="newsletter-label">
                         <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
                     </label>
                     <button type="submit" class="newsletter-button">
