--- a/index.html
+++ b/index.html
@@ -475,22 +475,31 @@
             </button>
             <p class="modal-heading">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-                <label class="label">
-                    Name
-                    <input type="text">
-                </label>
-                <label class="label">
-                    Phone
-                    <input type="tel">
-                </label>
-                <label class="label"> 
-                    Email
-                    <input type="email">
-                </label>
-                <label class="label">
-                    Comment
-                    <textarea></textarea>
-                </label>
+                <div>
+                    <label class="label" for="user-name">
+                        Name
+                        <input type="text" id="user-name" name="user-name">
+                    </label>
+                </div>
+                <div>
+                    <label class="label">
+                        Phone
+                        <input type="tel" >
+                    </label>
+                </div>
+                <div>
+                    <label class="label"> 
+                        Email
+                        <input type="email">
+                    </label>
+                </div>
+                <div>
+                    <label class="label">
+                        Comment
+                        <textarea></textarea>
+                    </label>
+                </div>
+                
             </form>
         </div>
     </div>
