--- a/index.html
+++ b/index.html
@@ -475,25 +475,25 @@
             </button>
             <p class="modal-heading">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-                <div>
+                <div class="form">
                     <label class="label" for="user-name">
                         Name
                         <input type="text" id="user-name" name="user-name">
                     </label>
                 </div>
-                <div>
+                <div class="form">
                     <label class="label">
                         Phone
                         <input type="tel" >
                     </label>
                 </div>
-                <div>
+                <div class="form">
                     <label class="label"> 
                         Email
                         <input type="email">
                     </label>
                 </div>
-                <div>
+                <div class="form">
                     <label class="label">
                         Comment
                         <textarea></textarea>
