--- a/index.html
+++ b/index.html
@@ -478,28 +478,51 @@
                 <div class="form">
                     <label class="label" for="user-name">
                         Name
-                        <input type="text" id="user-name" name="user-name">
+                        <div class="input-container">
+                            <svg width="18" height="18" class="modal-svg">
+                                <use href="./images/icons.svg#icon-person"></use>
+                            </svg>
+                            <input type="text" id="user-name" name="user-name" class="modal-input" width="1.25" height="18">
+                        </div>
                     </label>
                 </div>
                 <div class="form">
-                    <label class="label">
+                    <label class="label" for="phone">
                         Phone
-                        <input type="tel" >
+                        <div class="input-container">
+                            <svg width="18" height="18" class="modal-svg">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                            <input type="tel" name="phone" class="modal-input" width="1.25" height="18" id="phone">
+                        </div>
                     </label>
                 </div>
                 <div class="form">
-                    <label class="label"> 
+                    <label class="label" for="email"> 
                         Email
-                        <input type="email">
+                        <div class="input-container">
+                            <svg width="18" height="18" class="modal-svg">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                            <input type="email" class="modal-input" width="1.25" height="18" id="email">
+                        </div>
                     </label>
                 </div>
                 <div class="form">
-                    <label class="label">
+                    <label class="label" for="comment">
                         Comment
-                        <textarea></textarea>
+                        <textarea class="textarea" id="comment" placeholder="Text input"></textarea>
                     </label>
                 </div>
-                
+                <div class="privacy-politic">
+                    <label>
+                        <input type="checkbox" name="privacy-politic">
+                        <p class="privacy-paragraph">I accept the terms and conditions of the</p><a class="privacy-link">Privacy Policy</a>
+                    </label>
+                </div>
+                <div class="button-container">
+                    <button type="submit" class="modal-button">Send</button>
+                </div>
             </form>
         </div>
     </div>
