--- a/portfolio.html
+++ b/portfolio.html
@@ -220,28 +220,28 @@
             <div class="second-part-footer">
                 <p class="second-part-footer-paragraph">Social media</p>
                 <ul class="list footer-social-media-list">
-                    <li class="social-media-list-item">
+                    <li class="footer-social-media-list-item">
                         <a class="footer-social-media" href="">
                             <svg class="social-media-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-media-list-item">
+                    <li class="footer-social-media-list-item">
                         <a class="footer-social-media" href="">
                             <svg class="social-media-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-media-list-item">
+                    <li class="footer-social-media-list-item">
                         <a class="footer-social-media" href="">
                             <svg class="social-media-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-media-list-item">
+                    <li class="footer-social-media-list-item">
                         <a class="footer-social-media" href="">
                             <svg class="social-media-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin2"></use>
@@ -252,6 +252,23 @@
             </div>
 
 
+
+            <div class="form-container">
+                <p class="subscribe-paragraph">Subscribe</p>
+                <form class="newsletter-form">
+                    <label for="newsletter" class="newsletter-label">
+                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
+                    </label>
+                    <button type="submit" class="newsletter-button">
+                        Subscribe
+                        <svg class="newsletter-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-fly">
+                            </use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+                
 
         </div>
     </footer>
