--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                         Name
                     </label>
                         <div class="input-container">
-                            <input type="text" id="user-name" name="user-name" class="modal-input" width="1.25" height="18">
+                            <input type="text" id="user-name" name="user-name" class="modal-input">
                             <svg width="18" height="18" class="modal-svg">
                                 <use href="./images/icons.svg#icon-person"></use>
                             </svg>
@@ -494,7 +494,7 @@
                         Phone
                     </label>
                         <div class="input-container">
-                            <input type="tel" name="phone" class="modal-input" width="1.25" height="18" id="phone">
+                            <input type="tel" name="phone" class="modal-input" id="phone">
                             <svg width="18" height="18" class="modal-svg">
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
@@ -507,7 +507,7 @@
                         Email
                     </label>
                         <div class="input-container">
-                            <input type="email" class="modal-input" width="1.25" height="18" id="email">
+                            <input type="email" class="modal-input" id="email">
                             <svg width="18" height="18" class="modal-svg">
                                 <use href="./images/icons.svg#icon-email"></use>
                             </svg>
