--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                             Email
                         </label>
                             <div class="input-container">
-                                <input type="email" class="modal-input" id="email">
+                                <input type="email" name="email" class="modal-input" id="email">
                                 <svg width="18" height="24" class="modal-svg">
                                     <use href="./images/icons.svg#icon-email"></use>
                                 </svg>
