--- a/index.html
+++ b/index.html
@@ -516,10 +516,10 @@
                         
                 </div>
                     <div class="form">
-                        <label class="label" for="comment">
+                        <label class="label" for="user-comment">
                         Comment
                         </label>
-                            <textarea class="textarea" id="comment" placeholder="Text input"></textarea>
+                            <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     
                     </div>
                     <div class="privacy-politic">
