--- a/index.html
+++ b/index.html
@@ -515,14 +515,14 @@
                             </div>
                         
                 </div>
-                    <div class="form">
+                <div class="form-text-area">
                         <label class="label" for="user-comment">
                         Comment
                         </label>
                             <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     
-                    </div>
-                    <div class="privacy-politic">
+                </div>
+                <div class="privacy-politic">
                         <label>
                             <input type="checkbox" name="privacy-politic">
                             <p class="privacy-paragraph">I accept the terms and conditions of the</p><a class="privacy-link">Privacy Policy</a>
