--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                     
                 </div>
                 <div class="privacy-politic">
-                            <input type="checkbox" name="privacy-politic">
+                            <input type="checkbox" name="user-privacy">
                             <p class="privacy-paragraph">I accept the terms and conditions of the</p><a class="privacy-link">Privacy Policy</a>
                     </div>
                     <div class="button-container">
