--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                     
                 </div>
                 <div class="privacy-politic">
-                            <input type="checkbox" name="user-privacy">
-                            <p class="privacy-paragraph">I accept the terms and conditions of the</p><a class="privacy-link">Privacy Policy</a>
+                            <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
+                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the</label>
                     </div>
                     <div class="button-container">
                         <button type="submit" class="modal-button">Send</button>
