--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
                             <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     
                 </div>
-                <div class="privacy-politic">
+                <div class="privacy-policy">
                             <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
-                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the</label>
+                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the<span>Privacy Policy</span></label>
                     </div>
                     <div class="button-container">
                         <button type="submit" class="modal-button">Send</button>
