--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                 </div>
                 <div class="privacy-policy">
                             <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
-                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of 
+                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of <a class="privacy-link">Privacy policy</a>
                             <span class="svg-checkbox">
                                 <svg width="10" height="8">
                                     <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
