--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                     
                 </div>
                 <div class="privacy-policy">
-                            <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
+                            <input class="checkbox-policy visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
                             <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
                             <span class="svg-checkbox">
                                 <svg width="10" height="8">
