--- a/index.html
+++ b/index.html
@@ -517,11 +517,11 @@
                 <div class="privacy-policy">
                             <input class="checkbox-policy visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
                             <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
-                            <span class="svg-checkbox">
+                            <span class="svg-cbox">
                                 <svg width="10" height="8">
                                     <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
                                 </svg>
-                                <a class="privacy-link">Privacy policy</a>
+                                
                             </label>
                     </div>
                     <div class="button-container">
