--- a/index.html
+++ b/index.html
@@ -515,21 +515,19 @@
                     
                 </div>
                 <div class="privacy-policy">
-                            <input class="checkbox-policy visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
-                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
-                            <span class="svg-cbox">
-                                <svg width="10" height="8">
+                        <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy">
+                        <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
+                            <span class="box-svg">
+                                <svg width="10" height="8" >
                                     <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
                                 </svg>
-                                
-                            </label>
-                    </div>
-                    <div class="button-container">
-                        <button type="submit" class="modal-button">Send</button>
-                    </div>
-                </form>
-            </div>
+                            <a class="privacy-link">Privacy policy</a>
+                        </label>
+                </div>
+                <button type="submit" class="modal-button">Send</button>
+            </form>
         </div>
+    </div>
 
 
         <script src="./js/modal.js"></script>
