--- a/index.html
+++ b/index.html
@@ -516,19 +516,20 @@
                 </div>
                 <div class="privacy-policy">
                         <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy">
-                        <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
+                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
                             <span class="box-svg">
                                 <svg width="10" height="8" >
                                     <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
                                 </svg>
                             <a class="privacy-link">Privacy policy</a>
-                        </label>
-                </div>
-                <button type="submit" class="modal-button">Send</button>
-
-            </form>
+                            </label>
+                    </div>
+                    <div class="button-container">
+                        <button type="submit" class="modal-button">Send</button>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
 
 
         <script src="./js/modal.js"></script>
