--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                     
                 </div>
                 <div class="privacy-policy">
-                        <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy">
+                        <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
                             <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
                             <span class="box-svg">
                                 <svg width="10" height="8" >
