--- a/index.html
+++ b/index.html
@@ -514,14 +514,17 @@
                             <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                     
                 </div>
+
                 <div class="privacy-policy">
+                    <label class="privacy-label" for="user-privacy">
                         <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
-                            <label class="privacy-label" for="user-privacy">I accept the terms and conditions of the
                             <span class="box-svg">
-                                <svg width="10" height="8" >
-                                    <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
-                                </svg>
-                            <a class="privacy-link">Privacy policy</a>
+                            <svg width="10" height="8" >
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                            </span>
+                            I accept the terms and conditions of the
+                            <a href="" class="privacy-link">Privacy policy</a>
                             </label>
                     </div>
                     <div class="button-container">
