--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <p class="subscribe-paragraph">Subscribe</p>
                 <form class="newsletter-form">
                     <label for="newsletter" class="newsletter-label">
-                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input">
+                        <input type="email" name="newsletter" placeholder="E-mail" id="newsletter" class="newsletter-input" required>
                     </label>
                     <button type="submit" class="newsletter-button">
                         Subscribe
@@ -473,7 +473,7 @@
                         Name
                         </label>
                             <div class="input-container">
-                                <input type="text" id="user-name" name="user-name" class="modal-input">
+                                <input type="text" id="user-name" name="user-name" class="modal-input" required>
                                 <svg width="18" height="24" class="modal-svg">
                                     <use href="./images/icons.svg#icon-person"></use>
                                 </svg>
@@ -486,7 +486,7 @@
                         Phone
                         </label>
                             <div class="input-container">
-                                <input type="tel" name="phone" class="modal-input" id="phone">
+                                <input type="tel" name="phone" class="modal-input" id="phone" required>
                                 <svg width="18" height="24" class="modal-svg">
                                     <use href="./images/icons.svg#icon-phone"></use>
                                 </svg>
@@ -499,7 +499,7 @@
                             Email
                         </label>
                             <div class="input-container">
-                                <input type="email" name="email" class="modal-input" id="email">
+                                <input type="email" name="email" class="modal-input" id="email" required>
                                 <svg width="18" height="24" class="modal-svg">
                                     <use href="./images/icons.svg#icon-email"></use>
                                 </svg>
@@ -511,20 +511,20 @@
                         <label class="label" for="user-comment">
                         Comment
                         </label>
-                            <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                            <textarea class="textarea" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
                     
                 </div>
 
                 <div class="privacy-policy">
-                    <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
                     <label class="privacy-label" for="user-privacy">
+                            <input class="box-policy visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" required>
                             <span class="box-svg">
                             <svg width="10" height="8" >
-                                <use href="./images/icons.svg#icon-check"></use>
+                                <use href="./images/icons.svg#icon-Property-1click-2"></use>
                             </svg>
                             </span>
                             I accept the terms and conditions of the
-                            <a href="" class="privacy-link">Privacy policy</a>
+                            <a href="" class="privacy-link">Privacy Policy</a>
                             </label>
                     </div>
                         <button type="submit" class="modal-button">Send</button>
