--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     <label class="privacy-label" for="user-privacy">
                             
                             <span class="box-svg">
-                            <svg width="10" height="8" >
+                            <svg width="10" height="8" class="box_svg">
                                 <use href="./images/icons.svg#icon-Property-1click-2"></use>
                             </svg>
                             </span>
