--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                             
                             <span class="box-svg">
                             <svg width="10" height="8" class="box_svg">
-                                <use href="./images/icons.svg#icon-Property-1click-2"></use>
+                                <use href="./images/icons.svg#icon-vector-23"></use>
                             </svg>
                             </span>
                             I accept the terms and conditions of the
